--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,6 +15,8 @@ jobs:
       - name: update feed
         run: |
           make run
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
           git add feed.xml
           git commit -m "update feed"
           git push origin master
