--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
         run: make build-app
       - name: update feed
         run: |
-          docker run --volume=$(pwd):/var/app alejgarciarodriguez/atom-feed:latest
+          docker run --volume=${{ github.workspace }}:/var/app alejgarciarodriguez/atom-feed:latest
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
           git checkout feed
