--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,6 +15,8 @@ jobs:
       - name: Build and run
         run: |
           make build-app
+          echo ${{ github.workspace }}
+          docker image ls
           docker run --volume=${{ github.workspace }}:/var/app alejgarciarodriguez/atom-feed:latest
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
