--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ master ]
   schedule:
-    - cron: "0 * * * *" # every day at 01:00
+    - cron: "0 7 * * *" # every day at 07:00
 
 jobs:
   build:
@@ -15,10 +15,11 @@ jobs:
       - name: Build and run
         run: |
           docker build --tag alejgarciarodriguez/atom-feed:latest --target=app .
-          docker run --volume=${{ github.workspace }}:/var/app alejgarciarodriguez/atom-feed:latest ls -la
+          docker run alejgarciarodriguez/atom-feed:latest ls -la
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
-          git checkout feed
+          docker run alejgarciarodriguez/atom-feed:latest php bin/console
+          git checkout -B feed
           git add feed.xml
           git commit -m "update feed"
           git push origin feed
