--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Build and run
         run: |
           docker build --tag alejgarciarodriguez/atom-feed:latest --target=app .
-          docker run --volume={{ github.workspace }}:/var/app/feed alejgarciarodriguez/atom-feed:latest
+          docker run --volume={{ $github.workspace }}:/var/app/feed alejgarciarodriguez/atom-feed:latest
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
           git checkout -B feed
