--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,12 +15,10 @@ jobs:
       - name: Build and run
         run: |
           docker build --tag alejgarciarodriguez/atom-feed:latest --target=app .
-          docker run --volume=${{ github.workspace }}:/var/app/feed alejgarciarodriguez/atom-feed:latest
+          docker run --volume=${{ github.workspace }}/feed:/var/app/feed alejgarciarodriguez/atom-feed:latest
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
           git checkout -B feed
-          ls -la feed
-          ls -la
           git add feed/atom.xml
           git commit -m "update feed"
           git push origin feed
