--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,5 +18,7 @@ jobs:
           docker run --volume=${{ github.workspace }}/feed:/var/app/feed alejgarciarodriguez/atom-feed:latest
           git checkout -B feed
           git add feed/atom.xml
+          git config --global user.email "alejgarciarodriguez@gmail.com"
+          git config --global user.name "alejgarciarodriguez"
           git commit -m "update feed"
           git push origin feed
