--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,8 +1,6 @@
 name: CI
 
 on:
-  push:
-    branches: [ master ]
   schedule:
     - cron: "0 7 * * *" # every day at 07:00
 
@@ -21,4 +19,4 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git add feed/atom.xml
           git commit -m "update feed"
-          git push origin feed
+          git push origin master
