--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,7 @@ services:
     environment:
       # The `client_host` below may optionally be replaced with `discover_client_host=yes`
       # Add `start_with_request=yes` to start debug session on each request
-      XDEBUG_CONFIG: >-
-        client_host=host.docker.internal
-        idekey=PHPSTORM
+      XDEBUG_CONFIG: "client_host=host.docker.internal idekey=PHPSTORM start_with_request=yes"
       XDEBUG_MODE: debug
       # This should correspond to the server declared in PHPStorm `Preferences | Languages & Frameworks | PHP | Servers`
       # Then PHPStorm will use the corresponding path mappings
