--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   schedule:
-    - cron: "0 7 * * *" # every day at 07:00
+    - cron: "0 7 * * 1-5" # monday-friday at 07:00
 
 jobs:
   build:
